@@ -1,8 +1,10 @@
 pocketsphinx (0.4-2) unstable; urgency=low
 
   * Change required debhelper version to 4, so maemo builds work
+  * Change swb/tidigits scripts to use 8kHz sampling rate by default
+    (although ALSA probably still doesn't work right on N800)
 
- -- David Huggins-Daines <dhuggins@cs.cmu.edu>  Wed, 22 Aug 2007 18:59:23 -0400
+ -- David Huggins-Daines <dhdfoo@gmail.com>  Wed, 22 Aug 2007 19:12:23 -0400
 
 pocketsphinx (0.4-1) unstable; urgency=low
 
